// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploadRow renders with uploaded file 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <div
    class="MuiBox-root css-moxgk8"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-13gd6xk-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-2 MuiGridLegacy-grid-md-3 css-ngslpu-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom MuiTypography-noWrap css-1efwksy-MuiTypography-root"
          data-testid="dsi-dsid-0"
        >
          a.txt
           (
          100.0B
          )
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 MuiGridLegacy-grid-md-3 css-w04l-MuiGridLegacy-root"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
          data-testid="dsi-label-upload-0"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
              data-analyticsid="dsi-label-upload-0-input"
              data-testid="dsi-label-upload-0-input"
              id="dsi-label-upload-0-input"
              maxlength="255"
              name="fileDescription"
              placeholder="Description"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 MuiGridLegacy-grid-md-3 css-w04l-MuiGridLegacy-root"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-ytlejw-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiSelect-root css-1ygkfzo-MuiInputBase-root-MuiInput-root"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-invalid="true"
              aria-labelledby="dsi-open-access-0-select"
              aria-required="true"
              class="MuiSelect-select MuiSelect-standard Mui-error MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              data-testid="dsi-open-access-0-select"
              id="dsi-open-access-0-select"
              role="combobox"
              tabindex="0"
            >
              Select access conditions
            </div>
            <input
              aria-hidden="true"
              aria-invalid="true"
              aria-labelledby="dsi-open-access-0-label"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              data-analyticsid="dsi-open-access-0-input"
              data-testid="dsi-open-access-0-input"
              id="dsi-open-access-0-input"
              required=""
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <p
            class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium Mui-required css-15g82cj-MuiFormHelperText-root"
            data-testid="dsi-open-access-0-helper-text"
            id="dsi-open-access-0-helper-text"
          >
            This field is required
          </p>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-2 css-1185iop-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-nr9o0-MuiTypography-root"
          data-testid="dsi-embargo-date-0"
        >
          No date required
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-1 css-ajq32e-MuiGridLegacy-root"
      >
        <span
          aria-label="Remove this file"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="dsi-dsid-0-delete"
            data-testid="dsi-dsid-0-delete"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUploadRow should show confirmation and delete file 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <ul
    class="MuiList-root MuiList-padding css-1rbmvro-MuiList-root"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-17yl9do-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AttachmentIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12.5C2 9.46 4.46 7 7.5 7H18c2.21 0 4 1.79 4 4s-1.79 4-4 4H9.5C8.12 15 7 13.88 7 12.5S8.12 10 9.5 10H17v2H9.41c-.55 0-.55 1 0 1H18c1.1 0 2-.9 2-2s-.9-2-2-2H7.5C5.57 9 4 10.57 4 12.5S5.57 16 7.5 16H17v2H7.5C4.46 18 2 15.54 2 12.5"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        data-analyticsid="dsi-dsid-0"
        data-testid="dsi-dsid-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap MuiListItemText-primary css-idtmck-MuiTypography-root"
        >
          a.txt (100.0B)
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
        >
          File name
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-17yl9do-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="LockOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2M9 6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9zm9 14H6V10h12zm-6-3c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-t4ynyp-MuiTypography-root"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-ytlejw-MuiFormControl-root"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiSelect-root css-hc0tq9-MuiInputBase-root-MuiInput-root"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-invalid="true"
                aria-labelledby="dsi-open-access-0-select"
                aria-required="true"
                class="MuiSelect-select MuiSelect-standard Mui-error MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                data-testid="dsi-open-access-0-select"
                id="dsi-open-access-0-select"
                role="combobox"
                tabindex="0"
              >
                Select access conditions
              </div>
              <input
                aria-hidden="true"
                aria-invalid="true"
                aria-labelledby="dsi-open-access-0-label"
                class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                data-analyticsid="dsi-open-access-0-input"
                data-testid="dsi-open-access-0-input"
                id="dsi-open-access-0-input"
                required=""
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
            <p
              class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium Mui-required css-u90aml-MuiFormHelperText-root"
              data-testid="dsi-open-access-0-helper-text"
              id="dsi-open-access-0-helper-text"
            >
              This field is required
            </p>
          </div>
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
        >
          File access
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-container css-xw6fwh-MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-whw0d-MuiListItem-root"
      >
        <div
          class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="CalendarTodayOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V10h16zm0-13H4V5h16z"
            />
          </svg>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-t4ynyp-MuiTypography-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-nr9o0-MuiTypography-root"
              data-testid="dsi-embargo-date-0"
            >
              No date required
            </p>
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
          >
            Embargo date
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root css-1q2o4t4-MuiListItemSecondaryAction-root"
      >
        <span
          aria-label="Remove this file"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="dsi-dsid-0-delete"
            data-testid="dsi-dsid-0-delete"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="DeleteIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
              />
            </svg>
          </button>
        </span>
      </div>
    </li>
  </ul>
</div>
`;
